--- a/student_loans_with_deep_learning.ipynb
+++ b/student_loans_with_deep_learning.ipynb
@@ -1731,17 +1731,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "start here:\n",
-        "\n",
-        "the template code showed support 188, which i think means some crappy data rows were removed.  this might account for the worse score i am getting compared to the template code"
-      ],
-      "metadata": {
-        "id": "OuvmVw4ifhZV"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1795,10 +1784,10 @@
         "\n",
         "**Loan programs to choose from** - A good recommendation system should have information about all the loan programs that the student could use, including the federal government's student loan programs, and offerings from other financial institutions, like Sallie Mae, and about the many loan forgiveness options available to some graduates.  The information must include:\n",
         "\n",
-        "1. Interest rates which will vary with loan terms.\n",
-        "2. Maxiumum and minimum loan amounts, to ensure the student's need for funds can be met.\n",
+        "1. Interest rates which will vary with loan terms.  A lower rate is more affordable.\n",
+        "2. Maximum and minimum loan amounts, to ensure the student's need for funds can be met.\n",
         "3. Restrictions, such as minimum credit score, which can affect a student's eligibility\n",
-        "4. Financial institution ratings and reviews, to highlight banks that are good to work with.\n",
+        "4. Financial institution ratings and reviews, to highlight banks that are good to work with in contrast to lower-rated institutions that provide poorer service.\n",
         "\n",
         "**The student's needs and qualifications for a loan** - This information can be collected from the student applicant:\n",
         "1. Field of study - some programs offer loan forgiveness to graduates\n",
@@ -1821,15 +1810,15 @@
         "**3. Describe two real-world challenges that you would take into consideration while building a recommendation system for student loans. Explain why these challenges would be of concern for a student loan recommendation system.**\n",
         "\n",
         "Implementation and operational challenges:\n",
-        "- Privacy - the information collected is going to include personally identifiable information (PII) and must be treated with extreme care.  \n",
-        "- Accuracy of loan information - Loan rates change frequently, so the system will need a reliable way to load the rates at least every morning.\n",
-        "- Dependencies on third party sites - One helpful feature of our system would be links to the loan application page of financial institutions.  These will need to be checked frequently to avoid leaving broken links on the page.    \n",
+        "- Privacy - the information collected is going to include personally identifiable information (PII) and must be treated with extreme care.  Solution here is to discuss the site data requirements with the legal team and make prudent choices about what data to collect given the risks.  \n",
+        "- Accuracy of loan information - Loan rates change frequently, so the system will need a reliable way to load the rates at least every morning.  Inaccurate rates will cast doubt on the accuracy of other information in our application.\n",
+        "- Dependencies on third party sites - One helpful feature of our system would be links to the loan application page of financial institutions.  These will need to be checked frequently to avoid leaving broken links on the page, which would make our app seem unprofessional and unmaintained.\n",
         "\n",
         "##References\n",
         "\n",
         "Student loan forgiveness - https://www.salliemae.com/blog-new/student-loan-forgiveness-faq/\n",
         "\n",
-        "Studen loan information - https://www.nerdwallet.com/h/category/student-loans\n",
+        "Student loan information - https://www.nerdwallet.com/h/category/student-loans\n",
         "\n",
         "\n",
         "\n",
